--- a/src/Pages/orders/Orders.css
+++ b/src/Pages/orders/Orders.css
@@ -43,16 +43,17 @@
     background-color: #2196f382;
 }
 
-.order button {
+.order .button {
     background-color: #765671;
     border: none;
     border-radius: 3px;
     color: #fff;
     cursor: pointer;
     padding: 5px 10px;
+    text-decoration: none;
 }
 
-.order button:hover {
+.order .button:hover {
     background-color: #765671a8;
 }
 
